# SignalForge

./: .env.example  .gitignore  BIBLIOGRAPHY.md  Dockerfile  LICENSE.txt  Makefile  README.md  docker-compose.yml  examples_concentration.py  pyproject.toml  pyrightconfig.json
.github/workflows/: ci.yml
docker/: init_extensions.sql
docs/: explainer_module.md  nlp_embeddings.md  nlp_ner.md  quantile_regression_guide.md  sector_classifier.md
examples/: adaptation_usage.py  backtesting_example.py  benchmark_comparison_example.py  execution_quality_example.py  explainer_example.py  ml_serving_example.py  mlflow_training_example.py  ner_example.py  nlp_embeddings_example.py  nlp_preprocessing_demo.py  nlp_sentiment_example.py  position_sizing_example.py  quantile_regression_example.py  sector_classification_example.py  technical_indicators_example.py  topic_extraction_example.py
infra/docker/: README.md  prometheus.yml
migrations/: env.py
migrations/versions/: 001_initial.py  002_add_document_embeddings.py  003_add_paper_trading_tables.py
src/signalforge/: __init__.py
src/signalforge/adaptation/: __init__.py  glossary.py  profile_resolver.py  service.py  template_engine.py
src/signalforge/alerts/: __init__.py  channels.py  manager.py  schemas.py  templates.py  throttler.py
src/signalforge/api/: main.py
src/signalforge/benchmark/: README.md  __init__.py  comparator.py  paper_portfolio.py  performance.py  publisher.py
src/signalforge/billing/: __init__.py  models.py  quota_manager.py  schemas.py  service.py  tier_features.py
src/signalforge/core/: __init__.py  cache_warming.py  compression.py  config.py  database.py  database_routing.py  exceptions.py  logging.py  metrics.py  rate_limiter.py  redis.py  retention.py  retry.py  security.py  token_blacklist.py
src/signalforge/dashboard/: __init__.py  config.py  schemas.py  streaming.py  widgets.py
src/signalforge/events/: __init__.py  calendar.py  earnings.py  economic_releases.py  fed.py  schemas.py
src/signalforge/execution/: README.md  __init__.py  liquidity.py  schemas.py  slippage.py  spread.py  volume_filter.py
src/signalforge/explainability/: __init__.py  explanation_service.py  explanation_translator.py  widgets.py  (+1 more)
tests/: __init__.py  conftest.py  test_adaptation.py  test_api_events.py  test_api_execution.py  test_api_ml.py  test_api_nlp.py  test_api_orderflow.py  test_api_recommendations.py  test_auth.py  test_backtesting.py  test_base_schemas.py  test_baseline_models.py  test_billing.py  test_celery_tasks.py  test_comparator.py  test_competition.py  test_concentration.py  test_contradiction_detector.py  test_core.py  test_correlation.py  test_dark_pools.py  test_dashboard.py  test_document_pipeline.py  test_ensemble.py  test_ensemble_quantile.py  test_events_calendar.py  test_events_earnings.py  test_events_fed.py  test_execution_quality.py  test_explainability.py  test_explainer.py  test_feed_generator.py  test_flow_aggregator.py  test_flow_anomaly.py  test_gateway.py  test_health.py  test_hybrid_recommender.py  test_inference_service.py  test_infrastructure.py  (+52 more)
tests/fixtures/: __init__.py  celery_fixtures.py  data_fixtures.py
(+215 files in other folders)
