[project]
name = "signalforge"
version = "0.1.0"
description = "Financial signal processing and market intelligence platform"
license = { text = "Apache-2.0" }
requires-python = ">=3.11"
authors = [
    { name = "SignalForge Team" }
]
keywords = ["finance", "signals", "market", "nlp", "trading"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "sqlalchemy[asyncio]>=2.0.25",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    "redis>=5.0.0",
    "celery[redis]>=5.3.0",
    "polars>=0.20.0",
    "yfinance>=0.2.36",
    "feedparser>=6.0.10",
    "httpx>=0.26.0",
    "passlib[bcrypt]>=1.7.4",
    "bcrypt>=4.0.0,<5.0.0",
    "python-jose[cryptography]>=3.3.0",
    "python-multipart>=0.0.6",
    "email-validator>=2.1.0",
    "structlog>=24.1.0",
    "tenacity>=8.2.0",
    "mlflow>=2.10.0",
    "statsmodels>=0.14.0",
    "scikit-learn>=1.3.0",
    "transformers>=4.36.0",
    "torch>=2.1.0",
    "spacy>=3.7.0",
    "sentence-transformers>=2.2.0",
    "pgvector>=0.2.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.2.0",
    "mypy>=1.8.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "httpx>=0.26.0",
    "types-passlib>=1.7.7",
    "types-python-jose>=3.3.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/signalforge"]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults
    "B904",   # raise without from inside except
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["ARG002"]  # Allow unused fixture arguments in tests

[tool.ruff.lint.isort]
known-first-party = ["signalforge"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = [
    "yfinance.*",
    "feedparser.*",
    "celery.*",
    "redis.*",
    "polars.*",
    "mlflow.*",
    "statsmodels.*",
    "sklearn.*",
    "scipy.*",
    "transformers.*",
    "torch.*",
    "spacy.*",
    "sentence_transformers.*",
    "pgvector.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --tb=short"
filterwarnings = [
    "ignore::DeprecationWarning",
]
